--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,30 +1,58 @@
-{% load i18n %}
+{% load static i18n %}
+
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE_SHORT }}">
     <head>
         <meta charset="utf-8">
-        <title>{% block title %}{% endblock %}</title>
+        <title>{% block title %}{{ site_name }}{% endblock %}</title>
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     </head>
     <body>
         <header>
             <h1>{{ site_name }}</h1>
-            <div id="login-area">
-            {% if user.is_authenticated %}
-                <a href="{% url 'users:personal-profile' %}">{{ user.username }}</a>
-                <a href="{% url 'users:logout' %}">{% translate 'logout' %}</a>
-            {% else %}
-                <a href="{% url 'users:login' %}">{% translate 'login' %}</a>
-                <a href="{% url 'users:register' %}">{% translate 'register' %}</a>
-            {% endif %}
-            </div>
+
+            <form action="{% url 'set_language' %}" method="post">
+                {% csrf_token %}
+                <input name="next" type="hidden" value="{{ request.path }}">
+                <label for="language">{% translate 'Language:' %}</label>
+                <select id="language" name="language">
+                    {% get_language_info_list for LANGUAGES as languages %}
+                    {% for language in languages %}
+                    <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                    {{ language.name_local }} ({{ language.code }})
+                    </option>
+                    {% endfor %}
+                </select>
+                <input type="submit" value="{% translate 'Set' %}">
+            </form>
+            <form action="{% url 'set_timezone' %}" method="POST">
+                {% csrf_token %}
+                <input name="next" type="hidden" value="{{ request.path }}">
+                <label for="timezone">{% translate 'Time zone:' %}</label>
+                <select id="timezone" name="timezone">
+                    {% for tz in timezones %}
+                    <option value="{{ tz }}"{% if tz == TIME_ZONE %} selected{% endif %}>{{ tz }}</option>
+                    {% endfor %}
+                </select>
+                <input type="submit" value="{% translate 'Set' %}">
+            </form>
+
+{#            <div id="login-area">#}
+{#            {% if user.is_authenticated %}#}
+{#                <a href="{% url 'users:personal-profile' %}">{{ user.username }}</a>#}
+{#                <a href="{% url 'users:logout' %}">{% translate 'logout' %}</a>#}
+{#            {% else %}#}
+{#                <a href="{% url 'users:login' %}">{% translate 'login' %}</a>#}
+{#                <a href="{% url 'users:register' %}">{% translate 'register' %}</a>#}
+{#            {% endif %}#}
+{#            </div>#}
         </header>
         <nav>
             <ul>
                 <li><a href="">{% translate 'Home' %}</a></li>
-                <li><a href="{% url 'articles:' %}">{% translate 'Articles' %}</a></li>
-                <li><a href="{% url 'articles:tag' %}">{% translate 'Tags' %}</a></li>
-                <li><a href="{% url 'articles:archive' %}">{% translate 'Archives' %}</a></li>
+                <li><a href="{% url 'article:list' %}">{% translate 'Articles' %}</a></li>
+                <li><a href="{% url 'article:tag-list' %}">{% translate 'Tags' %}</a></li>
+                <li><a href="{% url 'article:archive' %}">{% translate 'Archives' %}</a></li>
                 <li><a href="{% url 'about_me' %}">{% translate 'About me' %}</a></li>
             </ul>
             <form method="get" action="{% url 'articles:search' %}">
@@ -38,7 +66,7 @@
             {% block content %}{% endblock %}
         </main>
         <footer>
-            <p>{% translate '©Copyright 2050 by nobody. All rights reversed.' %}</p>
+            <p>{% translate '©Copyright 2050 by nobody. All rights reserved.' %}</p>
             <p><a href="{{ site_register_url }}">{{ site_register }}</a></p>
         </footer>
     </body>
