developing: finish tags view and archive view

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -49,7 +49,7 @@
         </header>
         <nav>
             <ul>
-                <li><a href="">{% translate 'Home' %}</a></li>
+                <li><a href="/">{% translate 'Home' %}</a></li>
                 <li><a href="{% url 'article:list' %}">{% translate 'Articles' %}</a></li>
                 <li><a href="{% url 'article:tag-list' %}">{% translate 'Tags' %}</a></li>
                 <li><a href="{% url 'article:archive' %}">{% translate 'Archives' %}</a></li>
