--- a/blog/templates/article/article_archive.html
+++ b/blog/templates/article/article_archive.html
@@ -5,7 +5,7 @@
 {% block title %}{% translate 'Archives' %}{% endblock %}
 
 {% block content %}
-    <div id="archive-index">
+    <div class="archive-index">
     {% for date in date_list %}
         <span class="archive-item">
             <a href="{% url 'article:year-archive' year=date.year %}">{{ date|localtime }}</a>
