--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -10,36 +10,36 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/codehilite.css' %}">
     </head>
     <body>
-        <header id="header">
-            <h1 id="site-name">{{ site_name }}</h1>
-
-            <form id="set-lan" action="{% url 'set_language' %}" method="post">
-                {% csrf_token %}
-                <input name="next" type="hidden" value="{{ request.path }}">
-                <label for="language">{% translate 'Language:' %}</label>
-                <select id="language" name="language">
-                    {% get_language_info_list for LANGUAGES as languages %}
-                    {% for language in languages %}
-                    <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                    {{ language.name_local }} ({{ language.code }})
-                    </option>
-                    {% endfor %}
-                </select>
-                <input type="submit" value="{% translate 'Set' %}">
-            </form>
-            <form id="set-tz" action="{% url 'set_timezone' %}" method="POST">
-                {% csrf_token %}
-                <input name="next" type="hidden" value="{{ request.path }}">
-                <label for="timezone">{% translate 'Time zone:' %}</label>
-                <select id="timezone" name="timezone">
-                    {% for tz in timezones %}
-                    <option value="{{ tz }}"{% if tz == TIME_ZONE %} selected{% endif %}>{{ tz }}</option>
-                    {% endfor %}
-                </select>
-                <input type="submit" value="{% translate 'Set' %}">
-            </form>
-
-{#            <div id="login-area">#}
+        <header class="header">
+            <div class="header-toolbar">
+                <form id="set-lan" action="{% url 'set_language' %}" method="post">
+                    {% csrf_token %}
+                    <input name="next" type="hidden" value="{{ request.path }}">
+                    <label for="language">{% translate 'Language:' %}</label>
+                    <select id="language" name="language">
+                        {% get_language_info_list for LANGUAGES as languages %}
+                        {% for language in languages %}
+                        <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                        {{ language.name_local }} ({{ language.code }})
+                        </option>
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="{% translate 'Set' %}">
+                </form>
+                <form id="set-tz" action="{% url 'set_timezone' %}" method="POST">
+                    {% csrf_token %}
+                    <input name="next" type="hidden" value="{{ request.path }}">
+                    <label for="timezone">{% translate 'Time zone:' %}</label>
+                    <select id="timezone" name="timezone">
+                        {% for tz in timezones %}
+                        <option value="{{ tz }}"{% if tz == TIME_ZONE %} selected{% endif %}>{{ tz }}</option>
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="{% translate 'Set' %}">
+                </form>
+            </div>
+            <h1 class="site-name">{{ site_name }}</h1>
+{#            <div class="login-area">#}
 {#            {% if user.is_authenticated %}#}
 {#                <a href="{% url 'users:personal-profile' %}">{{ user.username }}</a>#}
 {#                <a href="{% url 'users:logout' %}">{% translate 'logout' %}</a>#}
@@ -48,28 +48,30 @@
 {#                <a href="{% url 'users:register' %}">{% translate 'register' %}</a>#}
 {#            {% endif %}#}
 {#            </div>#}
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="/">{% translate 'Home' %}</a></li>
+                    <li><a href="{% url 'article:list' %}">{% translate 'Articles' %}</a></li>
+                    <li><a href="{% url 'article:tag-list' %}">{% translate 'Tags' %}</a></li>
+                    <li><a href="{% url 'article:archive' %}">{% translate 'Archives' %}</a></li>
+                    <li><a href="{% url 'about-me' %}">{% translate 'About me' %}</a></li>
+                </ul>
+                <form method="get" action="{% url 'article:search' %}">
+                    <label>
+                        <input type="search" name="q" placeholder="{% translate 'Input key words here' %}">
+                    </label>
+                    <input type="submit" value="{% translate 'Go!' %}">
+                </form>
+            </nav>
         </header>
-        <nav id="nav">
-            <ul>
-                <li><a href="/">{% translate 'Home' %}</a></li>
-                <li><a href="{% url 'article:list' %}">{% translate 'Articles' %}</a></li>
-                <li><a href="{% url 'article:tag-list' %}">{% translate 'Tags' %}</a></li>
-                <li><a href="{% url 'article:archive' %}">{% translate 'Archives' %}</a></li>
-                <li><a href="{% url 'about-me' %}">{% translate 'About me' %}</a></li>
-            </ul>
-            <form method="get" action="{% url 'article:search' %}">
-                <label>
-                    <input type="search" name="q" placeholder="{% translate 'Input key words here' %}">
-                </label>
-                <input type="submit" value="{% translate 'Go!' %}">
-            </form>
-        </nav>
-        <main id="main">
+        <main class="main">
             {% block content %}{% endblock %}
         </main>
-        <footer id="footer">
-            <p>'©Copyright 2021-{% now 'Y' %} {{ site_name }}.</p>
-            <p><a href="{{ site_register_url }}">{{ site_register }}</a></p>
+        <footer class="footer">
+            <div class="footer-wrapper">
+                <p>©Copyright 2021-{% now 'Y' %} {{ site_name }}</p>
+                <p><a href="{{ site_register_url }}">{{ site_register }}</a></p>
+            </div>
         </footer>
     </body>
 </html>
