--- a/blog/templates/about_me.html
+++ b/blog/templates/about_me.html
@@ -1,8 +1,17 @@
 {% extends "base.html" %}
-
 {% load i18n %}
 
 {% block title %}{% translate 'About me' %}{% endblock %}
+
+{% block nav_bar %}
+<ul>
+    <li><a href="/">{% translate 'Home' %}</a></li>
+    <li><a href="{% url 'article:list' %}">{% translate 'Articles' %}</a></li>
+    <li><a href="{% url 'article:tag-list' %}">{% translate 'Tags' %}</a></li>
+    <li><a href="{% url 'article:archive' %}">{% translate 'Archives' %}</a></li>
+    <li class="nav-cur"><a href="{% url 'about-me' %}">{% translate 'About me' %}</a></li>
+</ul>
+{% endblock %}
 
 {% block content %}
 <div class="article-content">
