--- a/blog/static/css/markdown.css
+++ b/blog/static/css/markdown.css
@@ -1,14 +1,9 @@
 .article-content {
   margin-left: 0;
   width: 100%;
-}
-.article-content {
-  overflow-y: scroll;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  /*font-size: 100%;*/
-  font-size: 1em;
-  line-height: 1.5em
+  font-size: 100%;
 }
 .article-content * {
   line-height: 1.5
@@ -36,7 +31,7 @@
 .article-content p {
   margin: 1em 0;
   padding: 0;
-  font-size: 14px
+  /*font-size: 14px*/
 }
 .article-content img {
   max-width: 100%
@@ -97,7 +92,7 @@
 .article-content pre,
 .article-content samp {
   font-family: monospace,monospace;
-  font-size: 14px
+  /*font-size: 14px*/
 }
 .article-content code,
 .article-content pre {
@@ -159,7 +154,7 @@
 }
 .article-content ol li,
 .article-content ul li {
-  font-size: 14px!important;
+  /*font-size: 14px!important;*/
   margin-bottom: .75em
 }
 .article-content li p:last-child {
@@ -180,9 +175,9 @@
 .article-content th {
   background: 0 0;
   background: #f8f8f8;
-  font-size: 14px
+  /*font-size: 14px*/
 }
 .article-content td {
   vertical-align: top;
-  font-size: 14px
+  /*font-size: 14px*/
 }
