--- a/blog/templates/article/article_archive.html
+++ b/blog/templates/article/article_archive.html
@@ -1,15 +1,24 @@
 {% extends 'base.html' %}
-
 {% load i18n tz %}
 
 {% block title %}{% translate 'Archives' %}{% endblock %}
 
+{% block nav_bar %}
+<ul>
+    <li><a href="/">{% translate 'Home' %}</a></li>
+    <li><a href="{% url 'article:list' %}">{% translate 'Articles' %}</a></li>
+    <li><a href="{% url 'article:tag-list' %}">{% translate 'Tags' %}</a></li>
+    <li class="nav-cur"><a href="{% url 'article:archive' %}">{% translate 'Archives' %}</a></li>
+    <li><a href="{% url 'about-me' %}">{% translate 'About me' %}</a></li>
+</ul>
+{% endblock %}
+
 {% block content %}
-    <div class="archive-index">
+<ul class="archive-index">
     {% for date in date_list %}
-        <span class="archive-item">
-            <a href="{% url 'article:year-archive' year=date.year %}">{{ date|localtime }}</a>
-        </span>
+    <li class="archive-item">
+        <a href="{% url 'article:year-archive' year=date.year %}">{{ date|date:'Y' }}</a>
+    </li>
     {% endfor %}
-    </div>
+</ul>
 {% endblock %}
