--- a/blog/templates/article/article_list.html
+++ b/blog/templates/article/article_list.html
@@ -1,21 +1,29 @@
 {% extends "base.html" %}
-
 {% load i18n tz %}
 
 {% block title %}{% translate 'Articles' %}{% endblock %}
 
-{% block content %}
-    {% for article in articles %}
-        <ul class="article-list">
-            <li class="article-item">
-                <a href="{% url 'article:detail' pk=article.id %}">{{ article.title }}</a>
-                <time itemprop="pubdate" datetime="{{ article.posted_at }}">
-                    {{ article.posted_at|localtime }}
-                </time>
-            </li>
-        </ul>
-    {% endfor %}
-    {% url 'article:list' as list_url %}
-    {% include 'page_nav.html' %}
+{% block nav_bar %}
+<ul>
+    <li><a href="/">{% translate 'Home' %}</a></li>
+    <li class="nav-cur"><a href="{% url 'article:list' %}">{% translate 'Articles' %}</a></li>
+    <li><a href="{% url 'article:tag-list' %}">{% translate 'Tags' %}</a></li>
+    <li><a href="{% url 'article:archive' %}">{% translate 'Archives' %}</a></li>
+    <li><a href="{% url 'about-me' %}">{% translate 'About me' %}</a></li>
+</ul>
+{% endblock %}
 
+{% block content %}
+<ul class="article-list">
+    {% for article in articles %}
+        <li class="article-item">
+            <a href="{% url 'article:detail' pk=article.id %}">{{ article.title }}</a>
+            <time itemprop="pubdate" datetime="{{ article.posted_at.isoformat }}">
+                {{ article.posted_at|localtime }}
+            </time>
+        </li>
+    {% endfor %}
+</ul>
+{% url 'article:list' as list_url %}
+{% include 'page_nav.html' %}
 {% endblock %}
