--- a/blog/templates/article/search.html
+++ b/blog/templates/article/search.html
@@ -1,52 +1,46 @@
 {% extends "base.html" %}
-
 {% load i18n tz %}
 
 {% block title %}{% translate 'Search results: ' %}{{ search }}{% endblock %}
 
 {% block content %}
-    <h2 class="search-header">{{ search }}</h2>
+<h2 class="sub-page-title">{% translate 'Search results: ' %}{{ search }}</h2>
+<ul class="article-list">
     {% for article in articles %}
-        <ul class="article-list">
-            <li class="article-item">
-                <a href="{% url 'article:detail' pk=article.id %}">{{ article.title }}</a>
-                <time itemprop="pubdate" datetime="{{ article.posted_at }}">
-                    {{ article.posted_at|localtime }}
-                </time>
-            </li>
-        </ul>
+        <li class="article-item">
+            <a href="{% url 'article:detail' pk=article.id %}">{{ article.title }}</a>
+            <time itemprop="pubdate" datetime="{{ article.posted_at.isoformat }}">
+                {{ article.posted_at|localtime }}
+            </time>
+        </li>
     {% endfor %}
-    <div class="pages">
-    {% url 'article:search' pk=tag.id as search_url %}
-    {% if page_obj.number != 1 %}
-        <span class="page first-page">
-            <a href="{{ search_url }}?q={{ search }}">
-                {% translate 'First' %}
-            </a>
-        </span>
-    {% endif %}
+</ul>
+{% url 'article:search' as search_url %}
+<div class="pages">
+    <span class="page first-page">
+        <a href="{{ search_url }}?q={{ search|urlencode }}">
+            {% translate 'First' %}
+        </a>
+    </span>
     {% if page_obj.has_previous %}
-        <span class="page previous-page">
-            <a href="{{ search_url }}?q={{ search }}&page={{ page_obj.previous_page_number }}">
-                {{ page_obj.previous_page_number }}
-            </a>
-        </span>
+    <span class="page previous-page">
+        <a href="{{ search_url }}?q={{ search|urlencode }}&page={{ page_obj.previous_page_number }}">
+            {{ page_obj.previous_page_number }}
+        </a>
+    </span>
     {% endif %}
     <span class="page" class="current-page">{{ page_obj.number }}</span>
     {% if page_obj.has_next %}
-        <span class="page next-page">
-            <a href="{{ search_url }}?q={{ search }}&page={{ page_obj.next_page_number }}">
-                {{ page_obj.next_page_number }}
-            </a>
-        </span>
+    <span class="page next-page">
+        <a href="{{ search_url }}?q={{ search|urlencode }}&page={{ page_obj.next_page_number }}">
+            {{ page_obj.next_page_number }}
+        </a>
+    </span>
     {% endif %}
-    {% if page_obj.number != paginator.num_pages %}
-        <span class="page last-page">
-            <a href="{{ search_url }}?q={{ search }}&page={{ paginator.num_pages }}">
-                {% translate 'Last' %}
-            </a>
-        </span>
-    {% endif %}
-    </div>
-
+    <span class="page last-page">
+        <a href="{{ search_url }}?q={{ search|urlencode }}&page={{ paginator.num_pages }}">
+            {% translate 'Last' %}
+        </a>
+    </span>
+</div>
 {% endblock %}
