--- a/blog/templates/article/tag_list.html
+++ b/blog/templates/article/tag_list.html
@@ -3,12 +3,22 @@
 
 {% block title %}{% translate 'Tags' %}{% endblock %}
 
+{% block nav_bar %}
+<ul>
+    <li><a href="/">{% translate 'Home' %}</a></li>
+    <li><a href="{% url 'article:list' %}">{% translate 'Articles' %}</a></li>
+    <li class="nav-cur"><a href="{% url 'article:tag-list' %}">{% translate 'Tags' %}</a></li>
+    <li><a href="{% url 'article:archive' %}">{% translate 'Archives' %}</a></li>
+    <li><a href="{% url 'about-me' %}">{% translate 'About me' %}</a></li>
+</ul>
+{% endblock %}
+
 {% block content %}
-    <div class="tag-list">
+<ul class="tag-list">
     {% for tag in tags %}
-        <span class="tag-item">
-            <a href="{% url 'article:tag-detail' pk=tag.id %}">{{ tag.name }}</a>({{ tag.articles.count }})
-        </span>
+    <li class="tag-item">
+        <a href="{% url 'article:tag-detail' pk=tag.id %}">{{ tag.name }}</a>({{ tag.articles.count }})
+    </li>
     {% endfor %}
-    </div>
+</ul>
 {% endblock %}
