--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
-
 {% load i18n tz %}
+
+{% block nav_bar %}
+<ul>
+    <li class="nav-cur"><a href="/">{% translate 'Home' %}</a></li>
+    <li><a href="{% url 'article:list' %}">{% translate 'Articles' %}</a></li>
+    <li><a href="{% url 'article:tag-list' %}">{% translate 'Tags' %}</a></li>
+    <li><a href="{% url 'article:archive' %}">{% translate 'Archives' %}</a></li>
+    <li><a href="{% url 'about-me' %}">{% translate 'About me' %}</a></li>
+</ul>
+{% endblock %}
 
 {% block content %}
 {% for article in articles %}
@@ -9,21 +18,21 @@
         <h2>{{ article.title }}</h2>
         <div class="article-meta">
             <span class="post-time">
-                {% translate 'post at' %}
-                <time itemprop="pubdate" datetime="{{ article.posted_at }}">
-                    {{ article.posted_at|localtime }}
+                <span class="article-meta-key">{% translate 'post at' %}</span>
+                <time class="article-meta-value" itemprop="pubdate" datetime="{{ article.posted_at.isoformat }}">
+                    {{ article.posted_at|localtime|date:'SHORT_DATE_FORMAT' }}
                 </time>
             </span>
             <span class="edit-time">
-                {% translate 'edit at' %}
-                <time datetime="{{ article.edited_at }}">
-                    {{ article.edited_at|localtime }}
+                <span class="article-meta-key">{% translate 'edit at' %}</span>
+                <time class="article-meta-value" datetime="{{ article.edited_at.isoformat }}">
+                    {{ article.edited_at|localtime|date:'SHORT_DATE_FORMAT' }}
                 </time>
             </span>
         </div>
     </header>
     <main class="article-content article-content-brief">
-        <p>{{ article.content_html|safe }}</p>
+        <p>{{ article.content_brief|safe }}</p>
     </main>
     <div class="read-more">
         <a href="{% url 'article:detail' pk=article.pk %}">{% translate 'Read more' %}</a>
